# google-test-template

./: CMakeLists.txt  README.md  build_gtest.sh  build_gtest_v7a.sh  run.sh
gtest/: CMakeLists.txt  test_calc.cpp  test_string_util.cpp
include/: calc.h  string_util.h
src/: CMakeLists.txt  calc.cpp  main.cpp  string_util.cpp
test/: CMakeLists.txt  test_calc.cpp  test_string_util.cpp
